WCF -> Web API >< WCF -> MongoDB

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\RegistrationServiceHost\packages.config" />
   <repository path="..\WebAPIRegistration\packages.config" />
   <repository path="..\WPFRegistration\packages.config" />
 </repositories>
